<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pr3md.registerandlocate.UserLocation"
    tools:showIn="@layout/activity_select_picture">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageView2"
        android:src="@drawable/camera"
        android:layout_marginTop="59dp"
        android:contentDescription="@string/capture_picture"
        android:onClick="CapturePicture"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/gallery"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="74dp"
        android:layout_marginEnd="74dp"
        android:contentDescription="@string/select_from_gallery"
        android:onClick="SelectFromGallery"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profilePic"
        android:src="@drawable/profilepic"
        android:contentDescription="@string/sample_picture"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue_to_Maps"
        android:id="@+id/button2"
        android:width="300dp"
        android:layout_below="@+id/profilePic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="continueToMaps"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Capture"
        android:id="@+id/textView5"
        android:layout_below="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Open Gallery"
        android:id="@+id/textView6"
        android:layout_below="@+id/imageView3"
        android:layout_alignRight="@+id/imageView3"
         />
</RelativeLayout>
